# logos-execution-zone-module

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  justfile  metadata.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  doctest-crash-probe.yml  doctests.yml
config/: testnet.config.yaml
doctests/: logos-execution-zone-runtime.test.yaml  run.sh
doctests/outputs/: logos-execution-zone-runtime.md
main/: index.html
main/macos-15/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
pr-24/: index.html
pr-24/macos-latest/: index.html
pr-24/ubuntu-latest/: index.html
pr-26/: index.html
pr-26/macos-latest/: index.html
pr-26/ubuntu-latest/: index.html
pr-27/: index.html
pr-27/macos-latest/: index.html
pr-27/ubuntu-latest/: index.html
pr-28/: index.html
pr-28/macos-latest/: index.html
pr-28/ubuntu-latest/: index.html
pr-29/: index.html
pr-29/macos-latest/: index.html
pr-29/ubuntu-latest/: index.html
pr-30/: index.html
pr-30/macos-latest/: index.html
pr-30/ubuntu-latest/: index.html
pr-31/: index.html
pr-31/macos-latest/: index.html
pr-31/ubuntu-latest/: index.html
pr-32/: index.html
pr-32/macos-latest/: index.html
pr-32/ubuntu-latest/: index.html
pr-33/: index.html
pr-33/macos-latest/: index.html
pr-33/ubuntu-latest/: index.html
pr-34/: index.html
pr-34/macos-latest/: index.html
pr-34/ubuntu-latest/: index.html
pr-37/: index.html
pr-37/macos-latest/: index.html
pr-37/ubuntu-latest/: index.html
pr-38/: index.html
pr-39/: index.html
pr-39/macos-latest/: index.html
pr-39/ubuntu-latest/: index.html
pr-40/: index.html
pr-40/macos-15/: index.html
pr-40/macos-latest/: index.html
pr-40/ubuntu-latest/: index.html
src/: i_logos_execution_zone_wallet_module.h  lez_core_module.cpp  lez_core_module.h  logos_execution_zone_wallet_module.cpp  logos_execution_zone_wallet_module.h
tests/: CMakeLists.txt  test_execution_zone.cpp  test_execution_zone_integration.cpp  test_lez_core.cpp  test_lez_core_integration.cpp
tests/mocks/: mock_wallet_ffi.cpp  mock_wallet_ffi_capture.h
tests/stubs/: wallet_ffi.h
